@@ -3,12 +3,14 @@
 <pkgmetadata>
 	<herd>proxy-maintainers</herd>
 	<maintainer>
-		<email>eric-f.garioud@wanadoo.fr</email>
-		<name>Eric F. GARIOUD</name>
-	</maintainer>
-	<maintainer>
 		<email>harold@alum.mit.edu</email>
 		<name>Harold Naparst</name>
+		<description>Active Maintainer, Assign bugs</description>
+	</maintainer>
+	<maintainer>
+		<email>eric-f.garioud@wanadoo.fr</email>
+		<name>Eric F. GARIOUD</name>
+		<description>Previous Maintainer, CC bugs</description>
 	</maintainer>
 	<use>
 		<flag name='bfsonly'>BFS by itslef vs The full ck patchset</flag>
