@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Nov 2014; Harold Naparst <harold@alum.mit.edu> metadata.xml:
+  Change Harold Naparst to primary maintainer.
+
 *ck-sources-3.10.61 (23 Nov 2014)
 
   23 Nov 2014; Harold Naparst <harold@alum.mit.edu> +ck-sources-3.10.61.ebuild:
